ui/portal/web/public/global.css
/* ... */
html.dark {
  --color-surface-primary-rice: #2D2C2A;
  --color-surface-primary-green: #7C7A65;
  --color-surface-secondary-rice: #363432;
  --color-surface-secondary-blue: #646273;
  --color-surface-secondary-red: #6B5D5D;
  --color-surface-tertiary-rice: #4D4B48;
  --color-surface-tertiary-green: #59574B;
  --color-surface-quaternary-green: #6B6958;
  --color-surface-quaternary-rice: #594F3C;
  --color-surface-quaternary-rice-hover: #6A5D42;
  --color-surface-disabled-gray: #363432;
  --color-overlay-rice: #F2E2B84D;
  --color-border-secondary-rice: #594F3C;
  --color-foreground-disabled-gray: #807D78;
  --color-foreground-tertiary: #999590;
  --color-foreground-tertiary-rice: #807660;
  --color-foreground-quaternary-rice: #594F3C;
  --color-foreground-secondary-rice: #363432;
  --color-foreground-primary-blue: #F7F8FB;
  --color-foreground-primary-red: #FEF1F1;
  --color-foreground-primary-green: #DCDBAB;
  --color-foreground-primary-rice: #E3BD66;
  --color-button-green: #D2D184;
  --color-primary-red: #423C3B;
  --color-primary-blue: #595763;
  --color-primary-rice: #E3BD66;
  --color-primary-900: #FFFCF6;
  --color-primary-gray: #595754;
  --color-primary-green: #48463F;
  --color-secondary-700: #FFF9F0;
  --color-secondary-blue: #CBCBE7;
  --color-secondary-rice: #E3BD66;
  --color-secondary-gray: #4D4B48;
  --color-secondary-red: #6B5D5D;
  --color-secondary-green: #504E45;
  --color-tertiary-500: #B2AEA8;
  --color-tertiary-rice: #474237;
  --color-tertiary-green: #3F3B35;
  --color-tertiary-blue: #646273;
  --color-status-fail: #FF6B6B;
  --color-status-success: #66C86A;

  --shadow-card: 0px 1px 6px rgba(25, 25, 24, 0.4), 0px 4px 13px rgba(25, 25, 24, 0.5);
  --shadow-btn-shadow-gradient: 0px 0px 8px -2px #FFFFFF7A inset, 0px 3px 6px -2px #FFFFFFA3 inset, 0px 4px 6px 0px #0000000A, 0px 4px 6px 0px #0000000A;
  --shadow-btn-secondary-shadow-gradient: 0px -1px 3px -2px #00000012 inset, 0px 2px 3px -1px #FFFFFF12 inset, 0px 1px 1px -0.5px #0000000A;

  --chartiq-filter: brightness(0) saturate(1710%) invert(35%) sepia(20%) saturate(1000%) hue-rotate(360deg) brightness(235%) contrast(89%);

  --color-bg-card-blue: linear-gradient(98.89deg, #373634 18.66%, #6E6D77 46.73%, #373634 86%);
  --color-bg-card-rice: linear-gradient(98.89deg, #383633 18.66%, #615A51 46.73%, #383633 86%);
  --color-bg-card-red: linear-gradient(98.89deg, #494443 11.21%, #584D4E 46.73%, #322F2F 88.96%);
  --color-bg-card-red-2: linear-gradient(0deg, #494443, #494443), linear-gradient(98.89deg, rgba(73, 68, 67, 0.2) 5.88%, rgba(88, 77, 78, 0.2) 46.73%, rgba(50, 47, 47, 0.2) 94.73%);
  --color-bg-card-green: linear-gradient(98.89deg, #373634 18.76%, #666654 46.73%, #373634 87.62%);
  --color-bg-card-green-2: linear-gradient(0deg, #373634, #373634), linear-gradient(98.89deg, rgba(55, 54, 52, 0.05) 5.88%, rgba(102, 102, 84, 0.05) 46.73%, rgba(55, 54, 52, 0.05) 94.73%);
}

body {
  overflow-x: hidden;
  overflow-y: scroll;
  min-height: 100svh;
  scrollbar-gutter: stable;
}

#root {
  font-family: 'ABCDiatypeRounded', sans-serif;
  padding-bottom: env(safe-area-inset-bottom);
}

.header {
  width: 200%;
  mask: url("./images/header-mask.svg") no-repeat bottom center / 115%;
}

@media screen and (min-width: 768px) {
  .header {
    width: 100%;
  }
}


@layer utilities {
  @media (min-height: 1000px) and (min-width: 1280px) {
    div.custom-width {
      width: calc(720px + (100vh - 1000px) * 0.8);
    }
  }

  .qr-container {
    display: flex;
    height: 100%;
    justify-content: center;
    align-items: center;
  }

  .max-h-available {
    max-height: 100vh;
    max-height: -moz-available;
    max-height: -webkit-fill-available;
    max-height: -webkit-stretch;
  }
}

[cmdk-group-heading] {
  @apply diatype-sm-medium text-tertiary-500;
  padding: 0 11px;
}

.react-json-view .variable-value div {
  /* biome-ignore lint/correctness/noUnknownFunction: theme() is required for dynamic Tailwind color */
  color: theme("colors.white.100") !important;
}

/* ChartIQ */
.ciq-day .ciq-nav,
.ciq-day .chartContainer,
.ciq-day cq-chart-title,
.ciq-night .ciq-nav,
.ciq-night .chartContainer,
.ciq-night cq-chart-title {
  color: var(--color-tertiary-500) !important;
  background: var(--color-surface-secondary-rice) !important;
  border: none;
}

cq-palette-dock [orientation="vertical"] {
  border-right: var(--color-secondary-gray) 1px solid;
}

cq-separator {
  border-color: var(--color-secondary-gray);
}

.palette-container {
  background: var(--color-surface-secondary-rice);
  border: none;
}

.ciq-day cq-menu .menu-clickable:not(cq-help) ,
.ciq-night cq-menu .menu-clickable:not(cq-help){
  color: var(--color-tertiary-500);
}

.stx-subholder {
  border: none;
}

.ciq-chart {
  box-shadow: none;
}

cq-drawing-palette .tool-group .drawing-tools-group {
  margin:0;
}

.ciq-day .ciq-chart:first-of-type,
.ciq-day cq-dropdown .content,
.ciq-night .ciq-chart:first-of-type,
.ciq-night cq-dropdown .content,
cq-drawing-palette .ciq-tool:before,
cq-drawing-palette .ciq-mini-widget:before {
  background: var(--color-surface-secondary-rice);
}

.ciq-night cq-drawing-palette .ciq-tool:before, .ciq-night cq-drawing-palette .ciq-mini-widget:before,
.ciq-night .ciq-select:hover,
.ciq-day cq-drawing-palette .ciq-tool:before, .ciq-day cq-drawing-palette .ciq-mini-widget:before,
.ciq-day .ciq-select:hover {
  background: var(--color-surface-tertiary-rice);
  border: transparent;
  color: var(--color-primary-900);
}

cq-heading {
  @apply exposure-xs-italic;
  text-transform: capitalize;
  color:  var(--color-secondary-700);
}

cq-dropdown .content>.item.ciq-active .ciq-switch,
cq-dropdown .content>.item.ciq-active:hover .ciq-switch,
.ciq-active .ciq-radio span:after,
.ciq-radio.ciq-active span:after {
  /* biome-ignore lint/correctness/noUnknownFunction: theme() is required for dynamic Tailwind color */
  background: theme("colors.red-bean.600");
}
/* ... */

